# ev-dash-ui

./: .gitignore  README.md
.github/workflows/: preview.yml
firmware/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/components/espressif__esp_lvgl_port/src/lvgl9/: esp_lvgl_port_disp.c
firmware/components/ev_dash_ui/: CMakeLists.txt
firmware/main/: CMakeLists.txt  idf_component.yml  main.c
tools/: _check_dial_center.ps1  _check_dial_in_red.ps1  _check_png_bbox.ps1  _roundtrip_test.ps1  _verify_c_embed.ps1  gen_debug_draw_test.ps1  gen_image_data.ps1  gen_image_data_lvgl.ps1
ui/: .gitignore  ev_dash.c  ev_dash.h  ev_dash_gen.c  ev_dash_gen.h  file_list_gen.cmake  globals.xml  project.xml  user_config.cmake
ui/components/gauge_center_readout/: gauge_center_readout.xml  gauge_center_readout_gen.c  gauge_center_readout_gen.h
ui/components/speed_scale_ring/: speed_scale_ring.xml  speed_scale_ring_fine.xml  speed_scale_ring_fine_gen.c  speed_scale_ring_fine_gen.h  speed_scale_ring_gen.c  speed_scale_ring_gen.h
ui/components/speedometer/: speedometer.xml  speedometer_gen.c  speedometer_gen.h
ui/fonts/: README.md  font_body_data.c  font_display_data.c  font_heading_data.c  font_small_data.c
ui/images/: README.md
ui/screens/: screen_main.xml  screen_main_gen.c
ui/user_code/: speedometer_assets.c  speedometer_assets.h  speedometer_needle.c  speedometer_needle.h
